// Copyright 2023 Alexey Lavrenchenko. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// 	http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package personalwebsite.identity.permissions;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option go_package = "personal-website-v2/go-apis/identity/permissions;permissions";

// Proto file describing the Permission.

// The permission.
message Permission {
    // The unique ID to identify the permission.
    uint64 id = 1;

    // The unique name to identify the permission.
    string name = 2;

    // The permission group ID.
    uint64 group_id = 3;

    // It stores the date and time at which the permission was created.
    google.protobuf.Timestamp created_at = 4;

    // The user ID to identify the user who created the permission.
    uint64 created_by = 5;

    // It stores the date and time at which the permission was updated.
    google.protobuf.Timestamp updated_at = 6;

    // The user ID to identify the user who updated the permission.
    uint64 updated_by = 7;

    // The permission status.
    PermissionStatusEnum.PermissionStatus status = 8;

    // It stores the date and time at which the permission status was updated.
    google.protobuf.Timestamp status_updated_at = 9;

	// The user ID to identify the user who updated the permission status.
    uint64 status_updated_by = 10;

    // Optional. The permission status comment.
    google.protobuf.StringValue status_comment = 11;

    // Optional. The app ID.
    google.protobuf.UInt64Value app_id = 12;

    // Optional. The app group ID.
    google.protobuf.UInt64Value app_group_id = 13;

    // The permission description.
    string description = 14;
}

// Container for enum describing the permission status.
message PermissionStatusEnum {
    // The permission status.
    enum PermissionStatus {
        // Unspecified. Do not use.
        UNSPECIFIED = 0;
        NEW = 1;
        ACTIVE = 2;
        INACTIVE = 3;
        DELETING = 4;
        DELETED = 5;
    }
}
